# Metreja

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Directory.Build.props  Directory.Build.targets  LICENSE  Metreja.sln  README.md  build.bat  demo.bat  pack.bat
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/hooks/: verify-build.sh
.github/workflows/: build-and-test.yml  publish.yml
.husky/: clang-format-check.sh  task-runner.json
docs/: code-review-dry-pola-docs.md  design-philosophy.md
scripts/: build-macos.sh  format-cpp.bat  format-cpp.sh
skills/metreja-profiler/: SKILL.md  ndjson-reference.md
src/Metreja.Cli/: Metreja.Cli.csproj  MetrejaConstants.cs  Program.cs  README.md
src/Metreja.Cli/Analysis/: AnalyzerHelpers.cs  CallTreeAnalyzer.cs  CallersAnalyzer.cs  DiffAnalyzer.cs  HotspotsAnalyzer.cs  MemoryAnalyzer.cs
src/Metreja.Cli/Commands/: AddCommand.cs  AnalyzeDiffCommand.cs  (+11 more)
src/Metreja.Profiler/: CMakeLists.txt  CallStack.cpp  CallStack.h  ClassFactory.cpp  ClassFactory.h  ConfigReader.cpp  ConfigReader.h  Guids.h  MethodCache.cpp  MethodCache.h  Metreja.Profiler.def  Metreja.Profiler.vcxproj  NdjsonWriter.cpp  NdjsonWriter.h  Profiler.cpp  Profiler.h  ProfilerContext.h  StatsAggregator.cpp  StatsAggregator.h  StringUtils.h  dllmain.cpp
src/Metreja.Profiler/amd64/: asmhelpers.asm
src/Metreja.Profiler/arm64/: asmhelpers.S
src/Metreja.Profiler/include/: cor.h  corerror.h  profiling.h  rpc.h  rpcndr.h  unknwn.h
src/Metreja.Profiler/platform/: exports.sym  pal.cpp  pal.h  pal_io.h  pal_threading.h  pal_time.h
src/Metreja.Tool/: DebugLog.cs  Metreja.Tool.csproj  MetrejaConstants.cs  Program.cs  README.md  UpdateChecker.cs
test/: validate.py
test/Metreja.IntegrationTests/: Metreja.IntegrationTests.csproj  ModuleInitializer.cs  ProfilerSessionFixture.cs
test/Metreja.TestApp/: Metreja.TestApp.csproj  Program.cs
(+97 files in other folders)
